--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -87,7 +87,7 @@
           </div>
 
           <div class="font-semibold">
-            <%= number_to_currency(e.amount) %>
+            <%= number_to_eur(e.amount) %>
           </div>
         </li>
       <% end %>
