--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,14 @@
   </head>
 
   <body>
-    <%= render 'shared/nav' %>
+    <% if authenticated? %>
+      <%= render 'shared/nav' %>
+    <% end %>
+
     <%= render 'shared/flash' %>
 
-    <%= yield %>
+    <main class="max-w-5xl space-y-10 py-12 mt-8 mx-auto">
+      <%= yield %>
+    </main>
   </body>
 </html>
