--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,9 +1,10 @@
-<nav class="bg-white border-b border-gray-200 shadow-sm rounded-b-lg mb-8">
+<nav class="bg-white border-b border-gray-200 shadow-sm rounded-b-lg">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-center space-x-12 py-3">
-      <%= link_to "Dashboard", root_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
-      <%= link_to "Expenses", expenses_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
-      <%= link_to "Categories", categories_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
+      <%= link_to "dashboard", root_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
+      <%= link_to "expenses", expenses_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
+      <%= link_to "categories", categories_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
+      <%= button_to "sign out", session_path, method: :delete, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline cursor-pointer" %>
     </div>
   </div>
 </nav>
