--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,6 +3,7 @@
     <div class="flex justify-center space-x-12 py-3">
       <%= link_to "dashboard", root_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
       <%= link_to "expenses", expenses_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
+      <%= link_to "income", incomes_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
       <%= link_to "categories", categories_path, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline" %>
       <%= button_to "sign out", session_path, method: :delete, class: "text-gray-700 hover:text-black font-medium transition-colors duration-200 hover:underline cursor-pointer" %>
     </div>
