--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -4,6 +4,11 @@
     <%= f.text_field :name, class: input_classes %>
   </div>
 
+  <div>
+    <%= f.label :monthly_budget, "Monthly Budget (€)", class: label_classes %>
+    <%= f.number_field :monthly_budget, step: 0.01, min: 0, placeholder: "Optional", class: input_classes %>
+  </div>
+
   <div class="flex justify-end">
     <%= f.submit category.new_record? ? "Create" : "Update", class: link_primary_classes %>
   </div>
